Updated user api.
