# backend/src/users/dto/create-user.dto.ts
@@ -2,12 +2,12 @@ import { IsEmail, IsString } from "class-validator";
 
 export class CreateUserDto {
     @IsString()
-    displayName: string
+    displayName: string;
 
     @IsEmail()
-    email: string
+    email: string;
 
     // TODO: Add password strength validation
     @IsString()
-    password: string
+    password: string;
 }
